[package]
name = "burst"
version = "0.1.0"
authors = ["Joel Palmer <joel@joel.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.39"
rusoto_ec2 = "0.39"
ssh2 = "0.3.2"
failure = "0.1.1"
rand = "0.6"
tempfile = "3.0.0"
rayon = "1.0.0"
slog-term = "2.4.0"
slog = "2.1.1"
#slog = { version = "2.1.1", features = ["max_level_trace"] }
scopeguard = "1"

[dev-dependencies]
rusoto_sts = "0.39"